# seminarsded

Difference/: Makefile  SOURCE.txt  differentiation.cpp  differentiation.h  easy_calk.cpp  lexical.cpp  lexical.h  main.cpp  operator_type.h  program.txt
Evgeniy_Onegin_sort/: book3.txt  main.cpp
Nasm/: scan_nasm.asm
Tasm/: convert1.asm  convert2.asm  first.asm  first.com  fourth.asm  fourth.com  hmwk4.asm  second.asm  second.com  third.asm  third.com
binary_translation/: CMakeLists.txt  Makefile  README.md  asm_opcodes.ods  assembler.cpp  assembler.h  binary_file.cpp  binary_file.h  comands_info.txt  dumdum.txt  dump.txt  elf  elf.txt  elf2  errors.cpp  errors.h  hello.txt  lib_out.txt  main.cpp  map.cpp  map.h  modrm.txt  obj.txt  old_asm.txt  out_lib.txt  output.txt  output_symbol_from_elf.txt  r32.txt  source_file.cpp  source_file.h  translator.cpp  translator.h  translator_rules.txt
contest_10tasks/main/: main.cpp
no_c_plus_plus_list/: Makefile  book.txt  errors.h  exel.csv  fileworking.cpp  fileworking.h  hash.cpp  hash.h  list.cpp  list.h  main.cpp
quadratic_polinom/: README.md  quadratic.h  quadratic_polinom.cpp
stack/: My_calk.cpp  My_calk.h  My_stack.cpp  My_stack.h  main.cpp
